# Tech_Management_By_AI

./: .dockerignore  .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.js
frontend/src/views/: Dashboard.vue  DrillDown.vue
tech_mgmt_ai/: __init__.py  __main__.py  config.py
tech_mgmt_ai/alerts/: __init__.py  notifiers.py
tech_mgmt_ai/api/: __init__.py  app.py  schemas.py
tech_mgmt_ai/connectors/: __init__.py  gitlab_connector.py
tech_mgmt_ai/llm/: __init__.py  code_reviewer.py  task_classifier.py
tech_mgmt_ai/metrics/: __init__.py  health_score.py
tech_mgmt_ai/models/: __init__.py  dora_metrics.py  hero_detector.py  team_sizing.py  team_state.py  tech_debt.py
tech_mgmt_ai/schema/: __init__.py  models.py
tech_mgmt_ai/storage/: __init__.py  database.py  metrics_store.py  models.py
tests/: test_dora_metrics.py  test_health_score.py  test_hero_detector.py  test_team_state.py  test_tech_debt.py
