[project]
name = "tech-mgmt-ai"
version = "0.1.0"
description = "AI-powered tech management tool based on 'An Elegant Puzzle' by Will Larson"
readme = "README.md"
authors = [{ name = "lx", email = "lx@example.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi ~=0.115.5",
    "uvicorn[standard] ~=0.32.1",
    "pydantic ~=2.10.1",
    "pydantic-settings ~=2.12.0",
    "python-dotenv ~=1.0.1",
    "httpx ~=0.28.0",
    "sqlalchemy >=2.0.36",
    "psycopg[binary,pool] ~=3.2.4",
    "psycopg2-binary >=2.9.0",
    "aiosqlite >=0.20.0",
    "numpy >=2.0.0",
    "pyyaml >=6.0.2",
    "click >=8.1.7",
    "langchain >=0.3.0",
    "langchain-core >=0.3.0",
    "langchain-openai >=0.2.0",
    "langchain-ollama >=0.2.0",
    "langchain-anthropic >=0.2.0",
    "langchain-community >=0.3.0",
    "zhipuai >=2.1.5",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-env",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "U"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
LOG_LEVEL = "INFO"

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "aiosqlite.*"]
ignore_missing_imports = true
